--- a/style.css
+++ b/style.css
@@ -101,12 +101,13 @@ body{
 }
 
 .parametro-senha__texto {
-    padding: 24px
+    padding: 24px;
     border-top: 2px solid var(--borda);
     border-bottom: 2px solid var(--borda);
     margin: 0;
-     font-size: 24px;
+    font-size: 24px;
 }
+
 @media screen and (min-width: 768px) {
     .parametro-coluna__senha{
         flex-direction: row;
