--- a/style.css
+++ b/style.css
@@ -117,6 +117,25 @@ body{
 label {
     font-size: 20px;
 }
+.barra {
+    background-color: var(--fundo-senha);
+    height: 30px;
+    width: 100%;
+}
+
+.forca {
+    height: 30px;
+    position: relative;
+    bottom: 30px;
+}
+.fraca {
+    width: 25px;
+    background-color: #e71b32;
+}
+.parametro-senha-textos {
+    display: flex;
+    justify-content: space-between;
+}
 
 @media screen and (min-width: 768px) {
     .parametro-coluna__senha{
